[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Jack Truskowski <jtruskow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
log = "*"
atomic-traits = "0.1.0"
atomic_refcell = "0.1.5"
crossbeam = "0.7.3"
num = "0.2.0"
mersenne_twister = "1.1.1"
csv = "1.0.0-beta.5"
murmurhash64 = "*"